# combos_docker

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  IDEA_TO_IMPL.md  Makefile  README.md  clean  compare_results.json  generator  install.sh  parameters copy.xml  parameters.sample.xml  parameters.xml  parameters.yaml  script.sample.sh  script.sh  xml2yaml.py
Files/: CMakeLists.txt  Makefile  boinc.cpp  create_deployment.c  create_deployment.cpp  create_platform.c  create_platform.cpp  parameters_struct_from_yaml.hpp  rand.cpp  rand.h  rand.hpp  thread_safe_queue.hpp
Files/client_side/: data_client.cpp  data_client.hpp  data_client_test.cpp  execute_task.cpp  execute_task.hpp  fetch_work.cpp  fetch_work.hpp
Files/components/: data_client_server.cpp  data_client_server.hpp  data_client_server_for_cluster.cpp  data_server.cpp  data_server.hpp  scheduler.cpp  scheduler.hpp  shared.cpp  shared.hpp  thread_safe_queue.hpp  types.hpp
Files/tools/: execution_state.cpp  execution_state.hpp  thermometer.hpp
Traces/: boom_host_cpu
Traces/seti/: prog.py
Traces/storage/: boom_disk_capacity
analysis/: parameters.xml
experiments/: parameters.xml  statistics.ipynb
experiments/default/: analyze.ipynb  result.csv  run.py  timeline.ipynb
